--- a/main/templates/main/includes/navbar.html
+++ b/main/templates/main/includes/navbar.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="#">{{user.username}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/">Logout</a>
+          <a class="nav-link " href="/logout">Logout</a>
         </li>
         {% else %}
         <li class="nav-item">
