--- a/main/templates/main/categories.html
+++ b/main/templates/main/categories.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
 {% block title %}
-Category
+HOME
 {% endblock title %}
 {% block css %}
 {% endblock css %}
@@ -9,9 +9,9 @@ Category
 <div class="container">
     <div class="row align-center">
         {% for cat in categories%}
-        <div class="col-12 col-md-6  m-3">
-            <div class="card" style="width: auto;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="col   m-3">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">{{cat.tutorial_category}}</h5>
                     <p class="card-text">{{cat.category_summary}}</p>
