--- a/main/templates/main/category.html
+++ b/main/templates/main/category.html
@@ -9,13 +9,13 @@ Category
 <div class="container">
     <div class="row align-center">
         {% for tut, partone in part_ones.items %}
-        <div class="col-12 col-md-6  m-3">
-            <div class="card" style="width: auto;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="col m-3">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="https://images.pexels.com/photos/1714208/pexels-photo-1714208.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">{{tut.tutorial_series}}</h5>
                     <p class="card-text">{{tut.series_summary}}</p>
-                    <a href="/{{partone}}" class="btn btn-primary">Series</a>
+                    <a href="/{{partone}}" class="btn btn-primary">Tut's</a>
                 </div>
             </div>
         </div>
